fix: title on mobile

--- a/assets/sunpages.css
+++ b/assets/sunpages.css
@@ -32,6 +32,7 @@ h1 {
     font-size: 2.5rem;
     color: var(--primary-color);
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 p {
